feat: add header

--- a/index.html
+++ b/index.html
@@ -1,14 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
+    <!-- Styles -->
     <link rel="stylesheet" href="./style.css">
     <title>CV - Tahir Rahimov</title>
 </head>
+
 <body>
-    <h1>CV </h1>
-    <p>Hello, WOrld!</p>
+    <header>
+        <h1 class="header-name"> Rahimov Tahir </h1>
+        <nav class="header-nav">
+            <ul>
+                <li><a href="#about-me">About me</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#project">My projects</a></li>
+                <li><a href="#contact-me">Contact me</a></li>
+            </ul>
+        </nav>
+        <nav class="header-social-nav">
+            <ul>
+                <li>
+                    <a class="facebook-main-nav" href="https://www.facebook.com/mr.T.Rahimov/" target="_blank">
+                        <img src="./assets/svg/facebook-nav.svg" width="25px" alt="facebook logo">
+                    </a>
+                </li>
+                <li>
+                    <a class="instagram-main-nav" href="https://www.instagram.com/mr.t.rahimov/" target="_blank">
+                        <img src="./assets/svg/instagram-nav.svg" width="25px" alt="instagram logo">
+                    </a>
+                </li>
+                <li>
+                    <a class="github-main-nav" href="https://github.com/rtahir1995/" target="_blank">
+                        <img src="./assets/svg/github-nav.svg" width="25px" alt="github logo">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="cv-header">
+            <img class="profile-photo" src="./assets/img/photo/cv_photo.png" alt="Tahir Rahimov Photo">
+        </section>
+        <section class="about-me" id="about-me">
+            <div class="about-me-info">
+                <h2>About me</h2>
+                <p class="about-info">I am from Azerbaijan. I live in Baku. I really like to travel. In order to
+                    travel a lot, I needed to find a profession that would not require constant presence in the office.
+                    So I decided to become a full stack developer. I’ve loved creating websites since I was a kid. I
+                    used to make websites on different website builders, such as ucoz. Now I hope to develop websites of
+                    a more professional level.</p>
+                <p class="about-contact">
+                    <p class="phone">
+                        <img src="./assets/img/social/phone.png" width="16px" height="16px" alt="My Phone">
+                        <a href="tel:+994555458599">+994555458599</a>
+                    </p>
+                    <p class="email">
+                        <img src="./assets/img/social/email.png" width="16px" height="16px" alt="My Email">
+                        <a href="mailto:mail@tahir-rahimov.com">mail@tahir-rahimov.com</a>
+                    </p>
+                    <p class="github">
+                        <img src="./assets/img/social/github.png" width="16px" height="16px" alt="My Github">
+                        <a href="https://github.com/rtahir1995/" target="_blank">rtahir1995</a>
+                    </p>
+                    <p class="discord">
+                        <img src="./assets/img/social/discord.png" width="16px" height="16px" alt="My Discord">
+                        <a href="#">rtahir1995#1295</a>
+                    </p>
+                    <p class="instagram">
+                        <img src="./assets/img/social/instagram.png" width="16px" height="16px" alt="My Instagram">
+                        <a href="https://www.instagram.com/mr.t.rahimov/" target="_blank">@mr.t.rahimov</a>
+                    </p>
+                    <p class="facebook">
+                        <img src="./assets/img/social/facebook.png" width="16px" height="16px" alt="My Facebook">
+                        <a href="https://www.facebook.com/mr.T.Rahimov/" target="_blank">Tahir Rahimov</a>
+                    </p>
+                    <p class="vk">
+                        <img src="./assets/img/social/vk.png" width="16px" height="16px" alt="My Vk">
+                        <a href="https://vk.com/mr.t.rahimov" target="_blank">Таир Рагимов</a>
+                    </p>
+                </p>
+            </div>
+        </section>
+        <section class="skills"></section>
+        <section class="experience"></section>
+        <section class="education"></section>
+        <section class="contact-me"></section>
+    </main>
+    <footer>
+        <img class="rsschool-logo" height="50px" src="./assets/svg/rs_school_js.svg" alt="RS School Logo">
+    </footer>
 </body>
+
 </html>
