fix: movedv the width from html to css

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
             <ul>
                 <li>
                     <a class="facebook-main-nav" href="https://www.facebook.com/mr.T.Rahimov/" target="_blank">
-                        <img src="./assets/svg/facebook-nav.svg" width="25px" alt="facebook logo">
+                        <img src="./assets/svg/facebook-nav.svg" alt="facebook logo">
                     </a>
                 </li>
                 <li>
                     <a class="instagram-main-nav" href="https://www.instagram.com/mr.t.rahimov/" target="_blank">
-                        <img src="./assets/svg/instagram-nav.svg" width="25px" alt="instagram logo">
+                        <img src="./assets/svg/instagram-nav.svg" alt="instagram logo">
                     </a>
                 </li>
                 <li>
                     <a class="github-main-nav" href="https://github.com/rtahir1995/" target="_blank">
-                        <img src="./assets/svg/github-nav.svg" width="25px" alt="github logo">
+                        <img src="./assets/svg/github-nav.svg" alt="github logo">
                     </a>
                 </li>
             </ul>
