feat: cv-header section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
     <!-- Styles -->
     <link rel="stylesheet" href="./style.css">
@@ -53,6 +55,11 @@
     <main>
         <section class="cv-header">
             <img class="profile-photo" src="./assets/img/photo/cv_photo.png" alt="Tahir Rahimov Photo">
+            <div class="buttons-header">
+                <h2>Tahir Rahimov</h2>
+                <h3>Web developer</h3>
+                <a class="hire-me" href="#contact-me">Hire me</a>
+            </div>
         </section>
         <section class="about-me" id="about-me">
             <div class="about-me-info">
