fix: correct class name

--- a/index.html
+++ b/index.html
@@ -5,31 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
-    <!-- Styles -->
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="assets/favicon.ico">
     <title>CV - Tahir Rahimov</title>
 </head>
 
 <body>
     <header>
-        <h1 class="header-name"> Rahimov Tahir </h1>
+        <h3 class="header-name"> Rahimov Tahir </h3>
         <nav class="header-nav">
             <ul>
-                <li><a href="#about-me">About me</a></li>
+                <li><a href="#summary">About me</a></li>
                 <li><a href="#education">Education</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#project">My projects</a></li>
-                <li><a href="#contact-me">Contact me</a></li>
+                <li><a href="#contacts">Contact me</a></li>
             </ul>
         </nav>
         <nav class="header-social-nav">
@@ -58,10 +48,10 @@
             <div class="buttons-header">
                 <h2>Tahir Rahimov</h2>
                 <h3>Web developer</h3>
-                <a class="hire-me" href="#contact-me">Hire me</a>
+                <a class="hire-me" href="#contacts">Hire me</a>
             </div>
         </section>
-        <section class="about-me" id="about-me">
+        <section class="about-me" id="summary">
             <div class="about-me-info">
                 <h2>About me</h2>
                 <p class="about-info">I am from Azerbaijan. I live in Baku. I really like to travel. In order to
@@ -104,7 +94,7 @@
         <section class="skills"></section>
         <section class="experience"></section>
         <section class="education"></section>
-        <section class="contact-me"></section>
+        <section class="contacts"></section>
     </main>
     <footer>
         <img class="rsschool-logo" height="50px" src="./assets/svg/rs_school_js.svg" alt="RS School Logo">
