--- a/index.html
+++ b/index.html
@@ -5,96 +5,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/css/fonts.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="icon" href="assets/favicon.ico">
     <title>CV - Tahir Rahimov</title>
 </head>
 
 <body>
-    <header>
-        <h3 class="header-name"> Rahimov Tahir </h3>
-        <nav class="header-nav">
+    <!-- header -->
+    <header class="header">
+        <!-- header social-->
+        <nav class="header-social">
             <ul>
-                <li><a href="#summary">About me</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#project">My projects</a></li>
-                <li><a href="#contacts">Contact me</a></li>
+                <li class="header-social_item">
+                    <a href="" class="header-social_link" target="_blank">
+                        <img class="facebook-header" src="./assets/svg/facebook-nav.svg" alt="Facebook header logo">
+                    </a>
+                </li>
+                <li class="header-social_item">
+                    <a href="" class="header-social_link" target="_blank">
+                        <img class="instagram-header" src="./assets/svg/instagram-nav.svg" alt="Instagram header logo">
+                    </a>
+                </li>
+                <li class="header-social_item">
+                    <a href="" class="header-social_link" target="_blank">
+                        <img class="github-header" src="./assets/svg/github-nav.svg" alt="Github header logo">
+                    </a>
+                </li>
             </ul>
         </nav>
-        <nav class="header-social-nav">
+        <!-- header nav -->
+        <nav class="header-nav">
             <ul>
-                <li>
-                    <a class="facebook-main-nav" href="https://www.facebook.com/mr.T.Rahimov/" target="_blank">
-                        <img src="./assets/svg/facebook-nav.svg" alt="facebook logo">
-                    </a>
-                </li>
-                <li>
-                    <a class="instagram-main-nav" href="https://www.instagram.com/mr.t.rahimov/" target="_blank">
-                        <img src="./assets/svg/instagram-nav.svg" alt="instagram logo">
-                    </a>
-                </li>
-                <li>
-                    <a class="github-main-nav" href="https://github.com/rtahir1995/" target="_blank">
-                        <img src="./assets/svg/github-nav.svg" alt="github logo">
-                    </a>
-                </li>
+                <li class="header-nav_item"><a href="#summary" class="header-nav_link">About me</a></li>
+                <li class="header-nav_item"><a href="#education" class="header-nav_link">Education</a></li>
+                <li class="header-nav_item"><a href="#skills" class="header-nav_link">Skills</a></li>
+                <li class="header-nav_item"><a href="#projects" class="header-nav_link">Projects</a></li>
+                <li class="header-nav_item"><a href="#contacts" class="header-nav_link">Contacts</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="cv-header">
+        <section class="main-header">
             <img class="profile-photo" src="./assets/img/photo/cv_photo.png" alt="Tahir Rahimov Photo">
             <div class="buttons-header">
-                <h2>Tahir Rahimov</h2>
+                <h1>Tahir Rahimov</h1>
                 <h3>Web developer</h3>
                 <a class="hire-me" href="#contacts">Hire me</a>
             </div>
         </section>
-        <section class="about-me" id="summary">
-            <div class="about-me-info">
-                <h2>About me</h2>
-                <p class="about-info">I am from Azerbaijan. I live in Baku. I really like to travel. In order to
-                    travel a lot, I needed to find a profession that would not require constant presence in the office.
-                    So I decided to become a full stack developer. I’ve loved creating websites since I was a kid. I
-                    used to make websites on different website builders, such as ucoz. Now I hope to develop websites of
-                    a more professional level.</p>
-                <p class="about-contact">
-                    <p class="phone">
-                        <img src="./assets/img/social/phone.png" width="16px" height="16px" alt="My Phone">
-                        <a href="tel:+994555458599">+994555458599</a>
-                    </p>
-                    <p class="email">
-                        <img src="./assets/img/social/email.png" width="16px" height="16px" alt="My Email">
-                        <a href="mailto:mail@tahir-rahimov.com">mail@tahir-rahimov.com</a>
-                    </p>
-                    <p class="github">
-                        <img src="./assets/img/social/github.png" width="16px" height="16px" alt="My Github">
-                        <a href="https://github.com/rtahir1995/" target="_blank">rtahir1995</a>
-                    </p>
-                    <p class="discord">
-                        <img src="./assets/img/social/discord.png" width="16px" height="16px" alt="My Discord">
-                        <a href="#">rtahir1995#1295</a>
-                    </p>
-                    <p class="instagram">
-                        <img src="./assets/img/social/instagram.png" width="16px" height="16px" alt="My Instagram">
-                        <a href="https://www.instagram.com/mr.t.rahimov/" target="_blank">@mr.t.rahimov</a>
-                    </p>
-                    <p class="facebook">
-                        <img src="./assets/img/social/facebook.png" width="16px" height="16px" alt="My Facebook">
-                        <a href="https://www.facebook.com/mr.T.Rahimov/" target="_blank">Tahir Rahimov</a>
-                    </p>
-                    <p class="vk">
-                        <img src="./assets/img/social/vk.png" width="16px" height="16px" alt="My Vk">
-                        <a href="https://vk.com/mr.t.rahimov" target="_blank">Таир Рагимов</a>
-                    </p>
-                </p>
-            </div>
-        </section>
-        <section class="skills"></section>
-        <section class="experience"></section>
-        <section class="education"></section>
-        <section class="contacts"></section>
     </main>
     <footer>
         <img class="rsschool-logo" height="50px" src="./assets/svg/rs_school_js.svg" alt="RS School Logo">
