feat: add about me, skills and code sections

--- a/index.html
+++ b/index.html
@@ -38,25 +38,94 @@
         <nav class="header-nav">
             <ul>
                 <li class="header-nav_item"><a href="#summary" class="header-nav_link">About me</a></li>
-                <li class="header-nav_item"><a href="#education" class="header-nav_link">Education</a></li>
                 <li class="header-nav_item"><a href="#skills" class="header-nav_link">Skills</a></li>
+                <li class="header-nav_item"><a href="#education" class="header-nav_link">Education</a></li>
                 <li class="header-nav_item"><a href="#projects" class="header-nav_link">Projects</a></li>
                 <li class="header-nav_item"><a href="#contacts" class="header-nav_link">Contacts</a></li>
             </ul>
         </nav>
     </header>
     <main>
+        <!-- Main Header -->
         <section class="main-header">
             <img class="profile-photo" src="./assets/img/photo/cv_photo.png" alt="Tahir Rahimov Photo">
             <div class="buttons-header">
                 <h1>Tahir Rahimov</h1>
-                <h3>Web developer</h3>
+                <h3>Front-End developer</h3>
                 <a class="hire-me" href="#contacts">Hire me</a>
             </div>
         </section>
+        <!-- About me -->
+        <section class="about-me" id="summary">
+            <h2 class="section-title"> About me </h2>
+            <div class="desc">
+                <p>
+                    <span class="text-lightblue ">&lt;</span> I am from Baku, Azerbaijan.<span class="text-lightblue ">
+                        &gt;</span>
+                </p>
+                <p>
+                    <span class="text-lightblue ">&lt;</span> I am a Junior Front End Developer<span
+                        class="text-lightblue ">
+                        &gt;</span>
+                </p>
+                <p>
+                    <span class="text-lightblue ">&lt;</span> I love travel, so I'm looking for a remote job.<span
+                        class="text-lightblue "> &gt;</span>
+                </p>
+            </div>
+        </section>
+        <!-- Skills -->
+        <section class="my-skills" id="skills">
+            <h2 class="section-title"> Skills </h2>
+            <div class="developer-skills">
+                <div class="container">
+                    <div class="skill-name">HTML</div>
+                    <div class="progress">
+                        <div class="html-skill">
+                            <p>100%</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="skill-name">CSS</div>
+                    <div class="progress">
+                        <div class="css-skill">
+                            <p>80%</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="skill-name">JavaScript</div>
+                    <div class="progress">
+                        <div class="js-skill">
+                            <p>10%</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Code Section -->
+
+        <section class="code-part" id="code">
+            <h2 class="section-title">Code</h2>
+            <code>
+                body { <br>
+                &emsp;&emsp; <span class="text-lightblue">display</span>: <span class="text-pink">flex</span>;<br>
+                &emsp;&emsp; <span class="text-lightblue">flex-direction</span>: <span
+                    class="text-pink">column</span>;<br>
+                &emsp;&emsp; <span class="text-lightblue">min-height</span>: <span class="text-lightgreen">100vh</span>
+                ;<br>
+                &emsp;&emsp; <span class="text-lightblue">width:</span> <span class="text-lightgreen">100%</span>;<br>
+                &emsp;&emsp; <span class="text-lightblue">color:</span> <span class="text-pink">#1d262d</span>;<br>
+                &emsp;&emsp; <span class="text-lightblue">font-family:</span> <span class="text-pink">'Roboto',
+                    sans-serif</span>;<br>
+                &emsp;}
+            </code>
+        </section>
     </main>
     <footer>
-        <img class="rsschool-logo" height="50px" src="./assets/svg/rs_school_js.svg" alt="RS School Logo">
+        <!-- <img class="rsschool-logo" height="50px" src="./assets/svg/rs_school_js.svg" alt="RS School Logo"> -->
     </footer>
 </body>
 
