--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
     <main>
         <!-- Main Header -->
-        <section class="main-header">
+        <section class="profile">
             <img class="profile-photo" src="./assets/img/photo/cv_photo.png" alt="Tahir Rahimov Photo">
             <div class="buttons-header">
                 <h1>Tahir Rahimov</h1>
@@ -122,6 +122,80 @@
                     sans-serif</span>;<br>
                 &emsp;}
             </code>
+        </section>
+
+        <!-- Education -->
+        <section class="edu" id="education">
+            <h2 class="section-title">Education</h2>
+            <div class="university">
+                <div class="university-item">
+                    <h3>Vistula University</h3>
+                    <p>Foundation of Computer Science <br> 2013 - 2014</p>
+                </div>
+                <div class="university-item">
+                    <h3>RLA of the Ministry of Justice if Russia</h3>
+                    <p> Faculty of Law <br> 2016 - 2021</p>
+                </div>
+                <div class="university-item">
+                    <h3>RS School</h3>
+                    <p>Front-End <br> 2022</p>
+                </div>
+            </div>
+        </section>
+        <!-- Languages -->
+        <section class="language-part" id="languages">
+            <h2 class="section-title">Languages</h2>
+            <div class="language-items">
+                <div class="language-item">
+                    <h3>
+                        <span class="text-lightblue">English</span> <span class="text-pink">( A2 )</span>
+                    </h3>
+                </div>
+                <div class="language-item">
+                    <h3>
+                        <span class="text-lightblue">Azerbaijani</span> <span class="text-pink">( Native )</span>
+                    </h3>
+                </div>
+                <div class="language-item">
+                    <h3>
+                        <span class="text-lightblue">Russian</span> <span class="text-pink">( C2 )</span>
+                    </h3>
+                </div>
+                <div class="language-item">
+                    <h3>
+                        <span class="text-lightblue">Turkish</span> <span class="text-pink">( B1 )</span>
+                    </h3>
+                </div>
+            </div>
+        </section>
+
+        <section class="my-projects" id="projects">
+            <h2 class="section-title">Projects</h2>
+            <div class="project-items">
+                <div class="project-item">
+                    <a href="https://rtahir1995.github.io/twitter/Media/index.html" target="_blank"
+                        rel="noopener noreferrer" class="project-link">
+                        <img src="./assets/img/projects/Twitter.png" alt="Twitter" class="project-img">
+                    </a>
+                </div>
+                <div class="project-item">
+                    <a href="https://rtahir1995.github.io/twitter/Bootstrap/index.html" target="_blank"
+                        rel="noopener noreferrer" class="project-link">
+                        <img src="./assets/img/projects/Twitter-Bootstrap.png" alt="Twitter (Bootstrap)"
+                            class="project-img">
+                    </a>
+                </div>
+                <div class="project-item">
+                    <a href="https://rtahir1995.github.io/skybl/" target="_blank" rel="noopener noreferrer"
+                        class="project-link">
+                        <img src="./assets/img/projects/Skybl.png" alt="Skybl" class="project-img">
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <section class="contact-me" id="contacts">
+            <h2 class="section-title">Contacts</h2>
         </section>
     </main>
     <footer>
