feat: contact section

--- a/index.html
+++ b/index.html
@@ -193,9 +193,73 @@
                 </div>
             </div>
         </section>
-
+        <!-- Contacts -->
         <section class="contact-me" id="contacts">
             <h2 class="section-title">Contacts</h2>
+            <div class="contacts-container">
+                <div class="contact-form">
+                    <form action="https://formspree.io/f/mrgjdrbr" method="POST">
+                        <div class="input-form">
+                            <div class="input-title">
+                                <label for="name"> Name: </label>
+                            </div>
+                            <div class="input-place">
+                                <input id="name" type="text" name="name" placeholder="Your name" required>
+                            </div>
+                        </div>
+                        <div class="input-form">
+                            <div class="input-title">
+                                <label for="email"> Email: </label>
+                            </div>
+                            <div class="input-place">
+                                <input id="email" type="email" name="email" placeholder="Your email" required>
+                            </div>
+                        </div>
+                        <div class="input-form">
+                            <div class="input-title">
+                                <label for="message">Message: </label>
+                            </div>
+                            <div class="input-place">
+                                <textarea id="message" rows="4" name="message" placeholder="Your message"
+                                    required></textarea>
+                            </div>
+                        </div>
+                        <div class="input-submit">
+                            <input class="submit" type="submit">
+                        </div>
+                    </form>
+                </div>
+                <div class="my-contacts">
+                    <p class="phone">
+                        <img src="./assets/img/social/phone.png" alt="My Phone">
+                        <a href="tel:+994555458599">+994555458599</a>
+                    </p>
+                    <p class="email">
+                        <img src="./assets/img/social/email.png" alt="My Email">
+                        <a href="mailto:mail@tahir-rahimov.com">mail@tahir-rahimov.com</a>
+                    </p>
+                    <p class="github">
+                        <img src="./assets/img/social/github.png" alt="My Github">
+                        <a href="https://github.com/rtahir1995/" target="_blank">rtahir1995</a>
+                    </p>
+                    <p class="discord">
+                        <img src="./assets/img/social/discord.png" alt="My Discord">
+                        <a href="#">rtahir1995#1295</a>
+                    </p>
+                    <p class="instagram">
+                        <img src="./assets/img/social/instagram.png" alt="My Instagram">
+                        <a href="https://www.instagram.com/mr.t.rahimov/" target="_blank">@mr.t.rahimov</a>
+                    </p>
+                    <p class="facebook">
+                        <img src="./assets/img/social/facebook.png" alt="My Facebook">
+                        <a href="https://www.facebook.com/mr.T.Rahimov/" target="_blank">Tahir Rahimov</a>
+                    </p>
+                    <p class="vk">
+                        <img src="./assets/img/social/vk.png" alt="My Vk">
+                        <a href="https://vk.com/mr.t.rahimov" target="_blank">Таир Рагимов</a>
+                    </p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
