feat: add footer

--- a/index.html
+++ b/index.html
@@ -230,40 +230,46 @@
                     </form>
                 </div>
                 <div class="my-contacts">
-                    <p class="phone">
-                        <img src="./assets/img/social/phone.png" alt="My Phone">
-                        <a href="tel:+994555458599">+994555458599</a>
-                    </p>
-                    <p class="email">
-                        <img src="./assets/img/social/email.png" alt="My Email">
-                        <a href="mailto:mail@tahir-rahimov.com">mail@tahir-rahimov.com</a>
-                    </p>
-                    <p class="github">
-                        <img src="./assets/img/social/github.png" alt="My Github">
-                        <a href="https://github.com/rtahir1995/" target="_blank">rtahir1995</a>
-                    </p>
-                    <p class="discord">
-                        <img src="./assets/img/social/discord.png" alt="My Discord">
-                        <a href="#">rtahir1995#1295</a>
-                    </p>
-                    <p class="instagram">
-                        <img src="./assets/img/social/instagram.png" alt="My Instagram">
-                        <a href="https://www.instagram.com/mr.t.rahimov/" target="_blank">@mr.t.rahimov</a>
-                    </p>
-                    <p class="facebook">
-                        <img src="./assets/img/social/facebook.png" alt="My Facebook">
-                        <a href="https://www.facebook.com/mr.T.Rahimov/" target="_blank">Tahir Rahimov</a>
-                    </p>
-                    <p class="vk">
-                        <img src="./assets/img/social/vk.png" alt="My Vk">
-                        <a href="https://vk.com/mr.t.rahimov" target="_blank">Таир Рагимов</a>
-                    </p>
+                    <ul>
+                        <li class="email">
+                            <img src="./assets/img/social/email.png" alt="My Email">
+                            <a href="mailto:mail@tahir-rahimov.com">mail@tahir-rahimov.com</a>
+                        </li>
+                        <li class="github">
+                            <img src="./assets/img/social/github.png" alt="My Github">
+                            <a href="https://github.com/rtahir1995/" target="_blank">rtahir1995</a>
+                        </li>
+                        <li class="discord">
+                            <img src="./assets/img/social/discord.png" alt="My Discord">
+                            <a href="#">rtahir1995#1295</a>
+                        </li>
+                        <li class="instagram">
+                            <img src="./assets/img/social/instagram.png" alt="My Instagram">
+                            <a href="https://www.instagram.com/mr.t.rahimov/" target="_blank">@mr.t.rahimov</a>
+                        </li>
+                        <li class="facebook">
+                            <img src="./assets/img/social/facebook.png" alt="My Facebook">
+                            <a href="https://www.facebook.com/mr.T.Rahimov/" target="_blank">Tahir Rahimov</a>
+                        </li>
+                        <li class="vk">
+                            <img src="./assets/img/social/vk.png" alt="My Vk">
+                            <a href="https://vk.com/mr.t.rahimov" target="_blank">Таир Рагимов</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
     </main>
     <footer>
-        <!-- <img class="rsschool-logo" height="50px" src="./assets/svg/rs_school_js.svg" alt="RS School Logo"> -->
+        <a href="https://rs.school/js/" target="_blank" rel="noopener noreferrer">
+            <img class="rsschool-logo" src="./assets/svg/rs_school_js.svg" alt="RS School Logo">
+        </a>
+        <p>All rights reserved &copy; 2022</p>
+        <a class="github-footer" href="https://github.com/rtahir1995/" target="_blank" rel="noopener noreferrer">
+            <img src="./assets/svg/github-nav.svg" alt="Github footer logo">rtahir1995
+        </a>
+
+
     </footer>
 </body>
 
